# multidisplay

./: CMakeLists.txt  Language_Parse.c  Language_Parse.h  client.c  example.json  exec  figure1.txt  list.c  list.h  main.c  my_thread.c  my_thread.h  port.h  scheduling.h  server.c  simple_list.h  tcb.h  test_animation.h
TestingFiles/: figure1.txt
animation/: client.c  client.h  client_main.c  server.c  server.h  server_main.c
lib/: point.h  socket_utils.c  socket_utils.h
linked_list/: list.c  list.h  tcb.h
my_thread/: my_thread.c  my_thread.h
parse_json/: parse_json.c  parse_json.h
sockets/: port.h  socket_utils.h
test_files/: example.json
utils/: area.h  error_handling.c  error_handling.h
